styled project section

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <section id="projects-page">
 <!-- Project Page -->
                 <h3>Projects</h3>
-                  <div class="col s12 m7">
+                  <div id="brain-breaks" class="col s12 m7">
                       <div class="card custom-card horizontal">
                         <div class="card-image">
                           <img src="./images/brain-breaks-pic.png" alt="screenshot of Brain Breaks web application">
@@ -100,7 +100,8 @@
                         <div class="card-stacked">
                           <div class="card-content">
                             <h4 class="header">Brain Breaks</h4>
-                            <p>I am a very simple card. I am good at containing small bits of information.</p>
+                            <p>Are you bad at working long hours and not taking a break, which in turn causes you to burn out? </p>
+                            <p>Brain Breaks comes to your rescue by solving that problem. Just enter how long you would like to work, then Brain Breaks calculates your break time with a helpful timer. While you work, listen to lo-fi beats that helps boost productivity. Then, after your focus time is up, enjoy your break. You deserve it!</p>
                           </div>
                           <div class="card-action custom-link">
                             <a href="https://genius2k21.github.io/07-Project-Brain_Breaks/" target="_blank">Tour the App Here</a>
@@ -111,7 +112,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col s12 m7">
+                    <div id="weather-app" class="col s12 m7">
                       <div class="card custom-card horizontal">
                         <div class="card-image">
                           <img src="./images/weather-app-pic.png" alt="screenshot of Weather App web application">
@@ -119,7 +120,8 @@
                         <div class="card-stacked">
                           <div class="card-content">
                             <h4 class="header">Weather App</h4>
-                            <p>I am a very simple card. I am good at containing small bits of information.</p>
+                            <p>Want a simple to use Weather App that doesn't take forever to load?</p>
+                            <p>I have designed a beautiful and functional online weather application. Simply put in your city name, and watch as your local weather populates the page. You can see the current weather as well as a 5 day forcast.</p>
                           </div>
                           <div class="card-action">
                             <a href="https://amandac0022.github.io/Weather-App-AMM/" target="_blank">Tour the App Here</a>
@@ -130,7 +132,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col s12 m7">
+                    <div id="code-quiz" class="col s12 m7">
                       <div class="card custom-card horizontal">
                         <div class="card-image">
                           <img src="./images/code-quiz-pic.png" alt="screenshot of Code Quiz webpage">
@@ -138,7 +140,8 @@
                         <div class="card-stacked">
                           <div class="card-content">
                             <h4 class="header">Code Quiz Game</h4>
-                            <p>I am a very simple card. I am good at containing small bits of information.</p>
+                            <p>Are you a coding master?</p>
+                            <p>Prove it by playing this fun simple coding quiz game. See if you can wind up on the high scores list.</p>
                           </div>
                           <div class="card-action custom-link">
                             <a href="https://amandac0022.github.io/Code-Quiz-AMM/" target="_blank">Tour the App Here</a>
@@ -149,11 +152,12 @@
                         </div>
                       </div>
                     </div>
-                <ul class="pagination">
-                    <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-                    <li class="active"><a href="#!">1</a></li>
-                    <li class="waves-effect"><a href="#!">2</a></li>
-                    <li class="waves-effect"><a href="#!">3</a></li>
+  <!-- Project Nav -->
+                <ul class="pagination project-nav">
+                    <li class=""><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+                    <li class="active"><a href="#brain-breaks">1</a></li>
+                    <li class="waves-effect"><a href="#weather-app">2</a></li>
+                    <li class="waves-effect"><a href="#code-quiz">3</a></li>
                     <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
                   </ul>
             </section>
