styled contact me page

--- a/index.html
+++ b/index.html
@@ -165,23 +165,23 @@
 <!-- Contact Me Section -->
                 <h2 id="contact">Contact Me</h2>
                 <form>
-                    <!-- input form below -->
-                    <div class="row center-align">
+                    <!-- input form -->
+                    <div class="row center-align custom-card">
                         <form class="col s12">
                           <div class="row">
-                            <div class="input-field col s4">
+                            <div class="input-field col s4 custom-input">
                               <i class="material-icons prefix">account_circle</i>
-                              <input id="icon_prefix" type="text" class="validate">
+                              <input required id="icon_prefix" type="text" class="validate">
                               <label for="icon_prefix">Name</label>
                             </div>
                             <div class="input-field col s4">
                               <i class="material-icons prefix">phone</i>
-                              <input id="icon_telephone" type="tel" class="validate">
+                              <input required id="icon_telephone" type="tel" class="validate">
                               <label for="icon_telephone">Telephone</label>
                             </div>
                             <div class="input-field col s4">
                                 <i class="material-icons prefix">email</i>
-                                <input id="icon_email" type="email" class="validate">
+                                <input required id="icon_email" type="email" class="validate">
                                 <label for="icon_email">Email</label>
                               </div>
                         </div>
@@ -193,12 +193,11 @@
                                 <span class="helper-text" data-error="wrong" data-success="right"></span>
                               </div>
                         </div>
-                        </form>
+                        <button id="submit-btn" class="btn waves-effect waves-light" type="submit" name="action">Submit
+                          <i class="material-icons right">send</i>
+                        </button>
                       </div>
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                        <i class="material-icons right">send</i>
-                    </button>
-                </form>
+                    </form>
             </section>
         </main>
 <!-- Footer -->
