--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <form>
                     <!-- input form -->
                     <div class="row center-align custom-card">
-                        <form class="col s12">
+                        <form action="mailto:AmandaC0022@gmail.com" method="POST" enctype="multipart/form-data" class="col s12">
                           <div class="row">
                             <div class="input-field col s4 custom-input">
                               <i class="material-icons prefix">account_circle</i>
@@ -193,40 +193,44 @@
                                 <span class="helper-text" data-error="wrong" data-success="right"></span>
                               </div>
                         </div>
-                        <button id="submit-btn" class="btn waves-effect waves-light" type="submit" name="action">Submit
+                        <button id="submit-btn" class="btn waves-effect waves-light" type="submit" value="send" name="action">Submit
                           <i class="material-icons right">send</i>
                         </button>
                       </div>
                     </form>
             </section>
+<!-- Resume Page -->
+            <section>
+              <div></div>
+            </section>
         </main>
 <!-- Footer -->
-        <footer class="page-footer">
+        <footer class="page-footer custom-footer">
             <div class="container">
               <div class="row">
 <!-- Email and Phone # -->
                 <div class="col l6 s12">
-                  <h5 class="white-text">Contact</h5>
-                  <p class="grey-text text-lighten-4">Email: AmandaC0022@gmail.com</p>
-                  <p class="grey-text text-lighten-4">Telephone: (###) ###-####</p>
+                  <h5>Contact</h5>
+                  <p class="text-lighten-4">Email: AmandaC0022@gmail.com</p>
+                  <p class="text-lighten-4">Telephone: (###) ###-####</p>
                 </div>
 <!-- Links -->
                 <div class="col l4 offset-l2 s12">
-                  <h5 class="white-text">Links</h5>
-                  <ul>
-                    <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">LinkedIn</a></li>
-                    <li><a class="grey-text text-lighten-3" href="#!">Etsy Shop</a></li>
-                  </ul>
+                  <h5>Links</h5>
+                    <a class="text-lighten-3 custom-link" href="https://github.com/AmandaC0022" target="_blank"><i class="fab fa-github"></i></a>
+                    <a class="text-lighten-3 custom-link" href="https://www.linkedin.com/in/amanda-morgan-0b8512210/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a class="text-lighten-3 custom-link" href="https://www.etsy.com/shop/TheRetroStitch" target="_blank"><i class="fab fa-etsy"></i></a>
                 </div>
               </div>
             </div>
             <div class="footer-copyright">
               <div class="container">
-              © 2021 Copyright Text
+              © 2021
               </div>
             </div>
           </footer>
+        <!-- Font Awesome Link -->
+        <script src="https://kit.fontawesome.com/5ba09d053d.js" crossorigin="anonymous"></script>
         <!-- JQuery Link  -->
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>  
         <!-- Materialize JavaScript Link -->
