changed styling on nav bar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="navbar-fixed">         
         <nav>
             <div class="nav-wrapper nav-wrapper-custom">
-            <a href="#home-page" class="brand-logo" id="home-icon"><i class="material-icons">home</i></a>
+            <a href="#home-page" class="brand-logo" id="home-icon-wrapper"><i id="home-icon" class="material-icons">home</i></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="#about-me-page">About</a></li>
