--- a/index.html
+++ b/index.html
@@ -103,11 +103,9 @@
                             <p>Are you bad at working long hours and not taking a break, which in turn causes you to burn out? </p>
                             <p>Brain Breaks comes to your rescue by solving that problem. Just enter how long you would like to work, then Brain Breaks calculates your break time with a helpful timer. While you work, listen to lo-fi beats that helps boost productivity. Then, after your focus time is up, enjoy your break. You deserve it!</p>
                           </div>
-                          <div class="card-action custom-link">
-                            <a href="https://genius2k21.github.io/07-Project-Brain_Breaks/" target="_blank">Tour the App Here</a>
-                          </div>
-                          <div class="card-action custom-link">
-                            <a href="https://github.com/AmandaC0022/07-Project-Brain_Breaks" target="_blank">See the Code Here</a>
+                          <div class="link-container">
+                            <a class="custom-link" href="https://genius2k21.github.io/07-Project-Brain_Breaks/" target="_blank">TOUR THE APP HERE</a>
+                            <a class="custom-link" href="https://github.com/AmandaC0022/07-Project-Brain_Breaks" target="_blank">SEE THE CODE HERE</a>
                           </div>
                         </div>
                       </div>
@@ -123,11 +121,9 @@
                             <p>Want a simple to use Weather App that doesn't take forever to load?</p>
                             <p>I have designed a beautiful and functional online weather application. Simply put in your city name, and watch as your local weather populates the page. You can see the current weather as well as a 5 day forcast.</p>
                           </div>
-                          <div class="card-action">
-                            <a href="https://amandac0022.github.io/Weather-App-AMM/" target="_blank">Tour the App Here</a>
-                          </div>
-                          <div class="card-action custom-link">
-                            <a href="https://github.com/AmandaC0022/Weather-App-AMM" target="_blank">See the Code Here</a>
+                          <div class="link-container">
+                            <a class="custom-link" href="https://amandac0022.github.io/Weather-App-AMM/" target="_blank">TOUR THE APP HERE</a>
+                            <a class="custom-link" href="https://github.com/AmandaC0022/Weather-App-AMM" target="_blank">SEE THE CODE HERE</a>
                           </div>
                         </div>
                       </div>
@@ -143,11 +139,9 @@
                             <p>Are you a coding master?</p>
                             <p>Prove it by playing this fun simple coding quiz game. See if you can wind up on the high scores list.</p>
                           </div>
-                          <div class="card-action custom-link">
-                            <a href="https://amandac0022.github.io/Code-Quiz-AMM/" target="_blank">Tour the App Here</a>
-                          </div>
-                          <div class="card-action custom-link">
-                            <a href="https://github.com/AmandaC0022/Code-Quiz-AMM" target="_blank">See the Code Here</a>
+                          <div class="link-container">
+                            <a class="custom-link" href="https://amandac0022.github.io/Code-Quiz-AMM/" target="_blank">TOUR THE APP HERE</a>
+                            <a class="custom-link" href="https://github.com/AmandaC0022/Code-Quiz-AMM" target="_blank">SEE THE CODE HERE</a>
                           </div>
                         </div>
                       </div>
@@ -194,7 +188,7 @@
                               </div>
                         </div>
                         <button id="submit-btn" class="btn waves-effect waves-light" type="submit" value="send" name="action">Submit
-                          <i class="material-icons right">send</i>
+                          <i class="material-icons right" id="submit-icon">send</i>
                         </button>
                       </div>
                     </form>
