created global variables for pages and nav

--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
             <a href="#home-page" class="brand-logo" id="home-icon-wrapper"><i id="home-icon" class="material-icons">home</i></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="#about-me-page">About</a></li>
-                <li><a href="#projects-page">Projects</a></li>
-                <li><a href="#">Resume</a></li>
-                <li><a href="#contact-me-page">Contact Me</a></li>
+                <li><a class="nav-about" href="#about-me-page">About</a></li>
+                <li><a class="nav-projects" href="#projects-page">Projects</a></li>
+                <li><a class="nav-resume" href="#">Resume</a></li>
+                <li><a class="nav-contact" href="#contact-me-page">Contact Me</a></li>
             </ul>
             </div>
         </nav>
     </div>
 <!-- Nav Bar Links -->
     <ul class="sidenav" id="mobile-demo">
-        <li><a href="#about-me-page">About</a></li>
-        <li><a href="#projects-page">Projects</a></li>
-        <li><a href="#">Resume</a></li>
-        <li><a href="#contact-me-page">Contact Me</a></li>
+        <li><a class="nav-about" href="#about-me-page">About</a></li>
+        <li><a class="nav-projects" href="#projects-page">Projects</a></li>
+        <li><a class="nav-resume" href="#">Resume</a></li>
+        <li><a class="nav-contact" href="#contact-me-page">Contact Me</a></li>
     </ul>
           
 <!-- Home Page -->
@@ -194,7 +194,7 @@
                     </form>
             </section>
 <!-- Resume Page -->
-            <section>
+            <section id="resume-page">
               <div></div>
             </section>
         </main>
