created all global vars

--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
                     </div>
   <!-- Project Nav -->
                 <ul class="pagination project-nav">
-                    <li class=""><a href="#!"><i class="material-icons">chevron_left</i></a></li>
-                    <li class="active"><a href="#brain-breaks">1</a></li>
-                    <li class="waves-effect"><a href="#weather-app">2</a></li>
-                    <li class="waves-effect"><a href="#code-quiz">3</a></li>
-                    <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+                    <li><a href="#!"><i class="material-icons left-arrow">chevron_left</i></a></li>
+                    <li class="project-nav-1"><a href="#brain-breaks">1</a></li>
+                    <li class="project-nav-2"><a href="#weather-app">2</a></li>
+                    <li class="project-nav-3"><a href="#code-quiz">3</a></li>
+                    <li><a href="#!"><i class="material-icons right-arrow">chevron_right</i></a></li>
                   </ul>
             </section>
             <section id="contact-me-page"> 
