--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul class="right hide-on-med-and-down">
                 <li><a class="nav-about" href="#about-me-page">About</a></li>
                 <li><a class="nav-projects" href="#projects-page">Projects</a></li>
-                <li><a class="nav-resume" href="#">Resume</a></li>
+                <li><a class="nav-resume" href="https://docs.google.com/document/d/19EnA79hpV41dessmFBykBVKv_RqbdfWG9bfJf15wY0M/edit">Resume</a></li>
                 <li><a class="nav-contact" href="#contact-me-page">Contact Me</a></li>
             </ul>
             </div>
@@ -92,7 +92,7 @@
             <section id="projects-page">
 <!-- Project Page -->
                 <h3>Projects</h3>
-                  <div id="brain-breaks" class="col s12 m7">
+                  <div id="brain-breaks" class="col s12 m7 scale-transition">
                       <div class="card custom-card horizontal">
                         <div class="card-image">
                           <img src="./images/brain-breaks-pic.png" alt="screenshot of Brain Breaks web application">
@@ -110,7 +110,7 @@
                         </div>
                       </div>
                     </div>
-                    <div id="weather-app" class="col s12 m7">
+                    <div id="weather-app" class="col s12 m7 scale-transition">
                       <div class="card custom-card horizontal">
                         <div class="card-image">
                           <img src="./images/weather-app-pic.png" alt="screenshot of Weather App web application">
@@ -128,7 +128,7 @@
                         </div>
                       </div>
                     </div>
-                    <div id="code-quiz" class="col s12 m7">
+                    <div id="code-quiz" class="col s12 m7 scale-transition">
                       <div class="card custom-card horizontal">
                         <div class="card-image">
                           <img src="./images/code-quiz-pic.png" alt="screenshot of Code Quiz webpage">
@@ -148,11 +148,9 @@
                     </div>
   <!-- Project Nav -->
                 <ul class="pagination project-nav">
-                    <li><a href="#!"><i class="material-icons left-arrow">chevron_left</i></a></li>
-                    <li class="project-nav-1"><a href="#brain-breaks">1</a></li>
-                    <li class="project-nav-2"><a href="#weather-app">2</a></li>
-                    <li class="project-nav-3"><a href="#code-quiz">3</a></li>
-                    <li><a href="#!"><i class="material-icons right-arrow">chevron_right</i></a></li>
+                    <li id="project-1"><a id="project-nav-1" href="#brain-breaks">1</a></li>
+                    <li id="project-2"><a id="project-nav-2" href="#weather-app">2</a></li>
+                    <li id="project-3"><a id="project-nav-3" href="#code-quiz">3</a></li>
                   </ul>
             </section>
             <section id="contact-me-page"> 
