embedded resume in website

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul class="right hide-on-med-and-down">
                 <li><a class="nav-about" href="#about-me-page">About</a></li>
                 <li><a class="nav-projects" href="#projects-page">Projects</a></li>
-                <li><a class="nav-resume" href="https://docs.google.com/document/d/19EnA79hpV41dessmFBykBVKv_RqbdfWG9bfJf15wY0M/edit">Resume</a></li>
+                <li><a class="nav-resume" href="#resume-page">Resume</a></li>
                 <li><a class="nav-contact" href="#contact-me-page">Contact Me</a></li>
             </ul>
             </div>
@@ -193,7 +193,7 @@
             </section>
 <!-- Resume Page -->
             <section id="resume-page">
-              <div></div>
+              <embed src="./2021 Web Development Resume.pdf" type="application/pdf" height="600px" width="90%"/>
             </section>
         </main>
 <!-- Footer -->
