added mobile design

--- a/index.html
+++ b/index.html
@@ -43,40 +43,39 @@
         <main>
             <section id="home-page">
     <!-- Profile Picture -->
-                <div class="col s12 m7">
-                    <h2 class="header" id="home-title">Amanda Morgan</h2>
-                    <div class="card horizontal custom-card">
-                    <div class="card-image custom-card-image">
-                        <img  id="profile-pic"src="images/profile.pic.jpg" alt="My profile picture">
-                    </div>
-                    <div class="overlay"> 
-                        <div class="overlay-text">      
-                            <p>"We don't make mistakes, just happy accidents."</p>
-                            <p>~ Bob Ross</p>
-                        </div>
-                    </div>
-                    <div class="card-stacked">
-                        <div class="card-content">
-                          <div class="card-content-header">
-                            <i class="material-icons">computer</i>
-                            <h3>Web Developer</h3>
-                            <i class="material-icons">color_lens</i>
-                            <h3>Designer</h3>
-                            <i class="material-icons">brush</i>
-                            <h3>Artist</h3>
-                            <i class="material-icons">group</i>
-                            <h3>Teacher</h3>
-                          </div>
-                          <div class="card-body">
-                              <p>Hi! My name is Amanda Morgan and I am currently in the process of switching careers from being an Elementary School Art Teacher to a Full Stack Website Developer.</p>
-                              <p>I am passionate about making, creating, designing, and building. Let me make your next website!</p>
-                          </div>
-                        <div class="card-action" id="profile-link">
-                          <a href="#about-me-page">See My Full Story</a>
-                        </div>
-                    </div>
-                    </div>
+              <h2 class="header" id="home-title">Amanda Morgan</h2>
+              <div class="card custom-card">
+                <div class="custom-card-image center">
+                  <img  id="profile-pic"src="images/profile.pic.jpg" alt="My profile picture">
                 </div>
+                <div class="overlay center"> 
+                  <div class="overlay-text center">      
+                      <p>"We don't make mistakes, just happy accidents."</p>
+                      <p>~ Bob Ross</p>
+                  </div>
+                </div>
+                <div>
+                  <div>
+                    <div class="card-content-header">
+                      <i class="material-icons">computer</i>
+                      <h3>Web Developer</h3>
+                      <i class="material-icons">color_lens</i>
+                      <h3>Designer</h3>
+                      <i class="material-icons">brush</i>
+                      <h3>Artist</h3>
+                      <i class="material-icons">group</i>
+                      <h3>Teacher</h3>
+                    </div>
+                    <div class="card-body center">
+                        <p>Hi! My name is Amanda Morgan and I am currently in the process of switching careers from being an Elementary School Art Teacher to a Full Stack Website Developer.</p>
+                        <p>I am passionate about making, creating, designing, and building. Let me make your next website!</p>
+                    </div>
+                  <div class="card-action center" id="profile-link">
+                    <a href="#about-me-page">See My Full Story</a>
+                  </div>
+              </div>
+              </div>
+            </div>
             </section>
 
             <section id="about-me-page">
@@ -93,12 +92,12 @@
 <!-- Project Page -->
                 <h3>Projects</h3>
                   <div id="brain-breaks" class="col s12 m7 scale-transition">
-                      <div class="card custom-card horizontal">
+                      <div class="card custom-card">
                         <div class="card-image">
                           <img src="./images/brain-breaks-pic.png" alt="screenshot of Brain Breaks web application">
                         </div>
                         <div class="card-stacked">
-                          <div class="card-content">
+                          <div class="card-content center">
                             <h4 class="header">Brain Breaks</h4>
                             <p>Are you bad at working long hours and not taking a break, which in turn causes you to burn out? </p>
                             <p>Brain Breaks comes to your rescue by solving that problem. Just enter how long you would like to work, then Brain Breaks calculates your break time with a helpful timer. While you work, listen to lo-fi beats that helps boost productivity. Then, after your focus time is up, enjoy your break. You deserve it!</p>
@@ -111,12 +110,12 @@
                       </div>
                     </div>
                     <div id="weather-app" class="col s12 m7 scale-transition">
-                      <div class="card custom-card horizontal">
+                      <div class="card custom-card">
                         <div class="card-image">
                           <img src="./images/weather-app-pic.png" alt="screenshot of Weather App web application">
                         </div>
                         <div class="card-stacked">
-                          <div class="card-content">
+                          <div class="card-content center">
                             <h4 class="header">Weather App</h4>
                             <p>Want a simple to use Weather App that doesn't take forever to load?</p>
                             <p>I have designed a beautiful and functional online weather application. Simply put in your city name, and watch as your local weather populates the page. You can see the current weather as well as a 5 day forcast.</p>
@@ -129,12 +128,12 @@
                       </div>
                     </div>
                     <div id="code-quiz" class="col s12 m7 scale-transition">
-                      <div class="card custom-card horizontal">
+                      <div class="card custom-card">
                         <div class="card-image">
                           <img src="./images/code-quiz-pic.png" alt="screenshot of Code Quiz webpage">
                         </div>
                         <div class="card-stacked">
-                          <div class="card-content">
+                          <div class="card-content center">
                             <h4 class="header">Code Quiz Game</h4>
                             <p>Are you a coding master?</p>
                             <p>Prove it by playing this fun simple coding quiz game. See if you can wind up on the high scores list.</p>
