--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <section id="projects-page">
 <!-- Project Page -->
                 <h3>Projects</h3>
-                  <div id="brain-breaks" class="col s12 m7 scale-transition">
+                  <div id="brain-breaks" class="col s12 m7 center">
                       <div class="card custom-card">
                         <div class="card-image">
                           <img src="./images/brain-breaks-pic.png" alt="screenshot of Brain Breaks web application">
@@ -109,7 +109,7 @@
                         </div>
                       </div>
                     </div>
-                    <div id="weather-app" class="col s12 m7 scale-transition">
+                    <div id="weather-app" class="col s12 m7">
                       <div class="card custom-card">
                         <div class="card-image">
                           <img src="./images/weather-app-pic.png" alt="screenshot of Weather App web application">
@@ -192,7 +192,7 @@
             </section>
 <!-- Resume Page -->
             <section id="resume-page">
-              <embed src="./2021 Web Development Resume.pdf" type="application/pdf" height="600px" width="90%"/>
+              <embed src="./2021 Web Development Resume.pdf" type="application/pdf" width="100%" height="700px"/>
             </section>
         </main>
 <!-- Footer -->
