added sparkling effect

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <!-- Materialize Icons Link -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"> 
         <!-- My CSS Link -->
         <link rel="stylesheet" type="text/css" href="./assets/style/style2.css"> 
+        <script src="http://s.codepen.io/assests/libs/modernizer.js" type="text/javascript"></script>
 	</head> 
-	<body>
+	<body class="sparkley">
 <!-- Nav Bar -->
     <div class="navbar-fixed">         
         <nav>
