condensed css styling

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <main>
             <section id="home-page">
     <!-- Profile Picture -->
-              <h2 class="header" id="home-title">Amanda Morgan</h2>
+              <h2 class="header custom-header">Amanda Morgan</h2>
               <div class="card custom-card">
                 <div class="custom-card-image center">
                   <img  id="profile-pic"src="images/profile.pic.jpg" alt="My profile picture">
@@ -80,26 +80,26 @@
             </div>
             </section>
 
-            <section id="about-me-page">
+            <section id="about-me-page" class="container custom-container">
 <!-- About Page -->
-                <h3>About Me</h3>
-                <div class="about-me-text">
+                <h3 class="custom-header">About Me</h3>
+                <div>
                   <p>I have always had the desire to create things since I was a little girl. I grew that passion in college when I majored in Art, particularly sculpture, from Auburn University with a minor in Art History. I then did an internship at the Birmingham Museum of Art creating lessons and resources for teachers and children using the Museum's collection. They hired me on after my intership to work in Bart's Art Venture where I interacted with families and school groups who came to visit the museum. I worked there for one year until I started graduate school at the University of Montevallo. I received my Masters in Education in 2016.</p>
                   <p>I then enbarked on my career path. I worked at Brookwood Middle School for 2 years as their Art Teacher. I then moved to Pelham Ridge Elementary where I taught almost 1,000 Pre-K through 5th graders for two years. I moved to Elvin Hill Elementary School two years ago and have been teaching K through 5th grade Art.</p> 
                   <p>After 6 years of teaching in the public school system, I needed a change of pace. I began to research different career options for a creative mind and discovered Website Development. With my Art's background, creative mind, leadership skills as a teacher, and bubbly demenor I am ready to make my debut in this new career field.</p>
-                  <p>One of my favorite past times is to crochet. My Granny taught me when I was 8 years old and I have been crocheting ever since. I have turned my hobby into a side hustle by opening up my own Etsy Shop, called <a href= "https://www.etsy.com/shop/TheRetroStitch" target="_blank" title="Visit my Etsy shop, The Retro Stitch"> The Retro Stitch </a>, where I sell handmade stuffed animals.</p>
+                  <p>One of my favorite past times is to crochet. My Granny taught me when I was 8 years old and I have been crocheting ever since. I have turned my hobby into a side hustle by opening up my own Etsy Shop, called <a class="custom-link" href= "https://www.etsy.com/shop/TheRetroStitch" target="_blank" title="Visit my Etsy shop, The Retro Stitch"> The Retro Stitch </a>, where I sell handmade stuffed animals.</p>
                 </div>
             </section>
             <section id="projects-page">
 <!-- Project Page -->
-                <h3>Projects</h3>
-                  <div id="brain-breaks" class="col s12 m7 center">
+                <h3 class="custom-header">Projects</h3>
+                  <div id="brain-breaks" class="col s12 m12 center">
                       <div class="card custom-card">
                         <div class="card-image">
                           <img src="./images/brain-breaks-pic.png" alt="screenshot of Brain Breaks web application">
                         </div>
                         <div class="card-stacked">
-                          <div class="card-content center">
+                          <div class="card-body center">
                             <h4 class="header">Brain Breaks</h4>
                             <p>Are you bad at working long hours and not taking a break, which in turn causes you to burn out? </p>
                             <p>Brain Breaks comes to your rescue by solving that problem. Just enter how long you would like to work, then Brain Breaks calculates your break time with a helpful timer. While you work, listen to lo-fi beats that helps boost productivity. Then, after your focus time is up, enjoy your break. You deserve it!</p>
@@ -117,7 +117,7 @@
                           <img src="./images/weather-app-pic.png" alt="screenshot of Weather App web application">
                         </div>
                         <div class="card-stacked">
-                          <div class="card-content center">
+                          <div class="card-body center">
                             <h4 class="header">Weather App</h4>
                             <p>Want a simple to use Weather App that doesn't take forever to load?</p>
                             <p>I have designed a beautiful and functional online weather application. Simply put in your city name, and watch as your local weather populates the page. You can see the current weather as well as a 5 day forcast.</p>
@@ -135,7 +135,7 @@
                           <img src="./images/code-quiz-pic.png" alt="screenshot of Code Quiz webpage">
                         </div>
                         <div class="card-stacked">
-                          <div class="card-content center">
+                          <div class="card-body center">
                             <h4 class="header">Code Quiz Game</h4>
                             <p>Are you a coding master?</p>
                             <p>Prove it by playing this fun simple coding quiz game. See if you can wind up on the high scores list.</p>
@@ -156,7 +156,7 @@
             </section>
             <section id="contact-me-page"> 
 <!-- Contact Me Section -->
-                <h2 id="contact">Contact Me</h2>
+                <h3 id="contact" class="custom-header">Contact Me</h3>
                 <form>
                     <!-- input form -->
                     <div class="row center-align custom-card">
