--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"> 
         <!-- My CSS Link -->
-        <link rel="stylesheet" type="text/css" href="./assets/style/style2.css"> 
+        <link rel="stylesheet" type="text/css" href="./assets/style/style.css"> 
         <script src="http://s.codepen.io/assests/libs/modernizer.js" type="text/javascript"></script>
 	</head> 
 	<body class="sparkley">
@@ -42,7 +42,7 @@
     </ul>
           
 <!-- Home Page -->
-        <main>
+        <main>  
             <section id="home-page">
     <!-- Profile Picture -->
               <h2 class="header custom-header">Amanda Morgan</h2>
@@ -80,7 +80,7 @@
             </div>
             </section>
 
-            <section id="about-me-page" class="container custom-container">
+            <section id="about-me-page" class="container custom-container scrollspy">
 <!-- About Page -->
                 <h3 class="custom-header">About Me</h3>
                 <div>
