added scrollspy on all sections

--- a/index.html
+++ b/index.html
@@ -80,17 +80,19 @@
             </div>
             </section>
 
-            <section id="about-me-page" class="container custom-container scrollspy">
+            <section id="about-me-page" class="scrollspy">
 <!-- About Page -->
                 <h3 class="custom-header">About Me</h3>
-                <div>
-                  <p>I have always had the desire to create things since I was a little girl. I grew that passion in college when I majored in Art, particularly sculpture, from Auburn University with a minor in Art History. I then did an internship at the Birmingham Museum of Art creating lessons and resources for teachers and children using the Museum's collection. They hired me on after my intership to work in Bart's Art Venture where I interacted with families and school groups who came to visit the museum. I worked there for one year until I started graduate school at the University of Montevallo. I received my Masters in Education in 2016.</p>
-                  <p>I then enbarked on my career path. I worked at Brookwood Middle School for 2 years as their Art Teacher. I then moved to Pelham Ridge Elementary where I taught almost 1,000 Pre-K through 5th graders for two years. I moved to Elvin Hill Elementary School two years ago and have been teaching K through 5th grade Art.</p> 
-                  <p>After 6 years of teaching in the public school system, I needed a change of pace. I began to research different career options for a creative mind and discovered Website Development. With my Art's background, creative mind, leadership skills as a teacher, and bubbly demenor I am ready to make my debut in this new career field.</p>
-                  <p>One of my favorite past times is to crochet. My Granny taught me when I was 8 years old and I have been crocheting ever since. I have turned my hobby into a side hustle by opening up my own Etsy Shop, called <a class="custom-link" href= "https://www.etsy.com/shop/TheRetroStitch" target="_blank" title="Visit my Etsy shop, The Retro Stitch"> The Retro Stitch </a>, where I sell handmade stuffed animals.</p>
+                <div class="card custom-card">
+                  <div class="card-body">
+                    <p>I have always had the desire to create things since I was a little girl. I grew that passion in college when I majored in Art, particularly sculpture, from Auburn University with a minor in Art History. I then did an internship at the Birmingham Museum of Art creating lessons and resources for teachers and children using the Museum's collection. They hired me on after my intership to work in Bart's Art Venture where I interacted with families and school groups who came to visit the museum. I worked there for one year until I started graduate school at the University of Montevallo. I received my Masters in Education in 2016.</p>
+                    <p>I then enbarked on my career path. I worked at Brookwood Middle School for 2 years as their Art Teacher. I then moved to Pelham Ridge Elementary where I taught almost 1,000 Pre-K through 5th graders for two years. I moved to Elvin Hill Elementary School two years ago and have been teaching K through 5th grade Art.</p> 
+                    <p>After 6 years of teaching in the public school system, I needed a change of pace. I began to research different career options for a creative mind and discovered Website Development. With my Art's background, creative mind, leadership skills as a teacher, and bubbly demenor I am ready to make my debut in this new career field.</p>
+                    <p>One of my favorite past times is to crochet. My Granny taught me when I was 8 years old and I have been crocheting ever since. I have turned my hobby into a side hustle by opening up my own Etsy Shop, called <a class="custom-link" href= "https://www.etsy.com/shop/TheRetroStitch" target="_blank" title="Visit my Etsy shop, The Retro Stitch"> The Retro Stitch </a>, where I sell handmade stuffed animals.</p>
+                  </div>
                 </div>
             </section>
-            <section id="projects-page">
+            <section id="projects-page" class="scrollspy">
 <!-- Project Page -->
                 <h3 class="custom-header">Projects</h3>
                   <div id="brain-breaks" class="col s12 m12 center">
@@ -154,7 +156,7 @@
                     <li id="project-3"><a id="project-nav-3" href="#code-quiz">3</a></li>
                   </ul>
             </section>
-            <section id="contact-me-page"> 
+            <section id="contact-me-page" class="scrollspy"> 
 <!-- Contact Me Section -->
                 <h3 id="contact" class="custom-header">Contact Me</h3>
                 <form>
@@ -193,7 +195,7 @@
                     </form>
             </section>
 <!-- Resume Page -->
-            <section id="resume-page">
+            <section id="resume-page" class="scrollspy">
               <embed src="./2021 Web Development Resume.pdf" type="application/pdf" width="100%" height="700px"/>
             </section>
         </main>
